<resources>
    <string name="app_name">Scorekeeper</string>
    <string name="team1increase">Team1Increase</string>
    <string name="team1decrease">Team1Decrease</string>
    <string name="minus_button">Minus Button</string>
    <string name="plus_button">Plus Button</string>
    <string name="score">0</string>
    <string name="team_1">Team 1</string>
    <string name="team_2">Team 2</string>
    <string name="night_mode">Night Mode</string>
    <string name="day_mode">Day Mode</string>

</resources>