<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/Team1Decrease"
            android:layout_width="@dimen/my_dimension"
            android:layout_height="@dimen/my_dimension"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="28dp"
            android:src="@drawable/ic_minus"
            android:contentDescription="@string/minus_button"
            android:background="@drawable/button_background_selector" style="@style/MinusButtons"

            />

        <ImageView
            android:id="@+id/Team1Increase"
            android:layout_width="@dimen/my_dimension"
            android:layout_height="@dimen/my_dimension"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="28dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="28dp"
            android:layout_marginBottom="28dp"
            android:src="@drawable/ic_plus"
            android:contentDescription="@string/plus_button"
            android:background="@drawable/button_background_selector"
            style="@style/PlusButtons"
 />

        <TextView
            android:id="@+id/Team1Score"
            android:text="@string/score"
            style="@style/ScoreText" />

        <TextView
            android:id="@+id/Team1Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/Team1Score"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="-150dp"
            android:text="@string/team_1"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            style="@style/TeamText"/>

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/Team2Decrease"
            android:layout_width="@dimen/my_dimension"
            android:layout_height="@dimen/my_dimension"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="28dp"
            android:src="@drawable/ic_minus"
            android:contentDescription="@string/minus_button"
            android:background="@drawable/button_background_selector"
            style="@style/MinusButtons"
            />

        <ImageView
            android:id="@+id/Team2Increase"
            android:layout_width="@dimen/my_dimension"
            android:layout_height="@dimen/my_dimension"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="28dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="28dp"
            android:layout_marginBottom="28dp"
            android:src="@drawable/ic_plus"
            android:contentDescription="@string/plus_button"
            android:background="@drawable/button_background_selector"
            style="@style/PlusButtons"
/>

        <TextView
            android:id="@+id/Team2Score"
            android:text="@string/score"
            style="@style/ScoreText" />
/>

        <TextView
            android:id="@+id/Team2Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/Team2Score"
            android:layout_marginTop="-159dp"
            android:layout_centerHorizontal="true"
            android:text="@string/team_2"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            style="@style/TeamText"/>

    </RelativeLayout>

</LinearLayout>
